--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,12 @@
 {
-  "functions": {
-    "pages/api/diabetes.py": {
-      "runtime": "python@3.9"
-    },
-    "pages/api/insurance.py": {
-      "runtime": "python@3.9"
+  "builds": [
+    {
+      "src": "pages/api/*.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
     }
-  }
+  ]
 }
