--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,7 @@
 {
-  "builds": [
-    {
-      "src": "pages/api/*.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
+  "functions": {
+    "pages/api/**/*.ts": {
+      "maxDuration": 60
     }
-  ]
+  }
 }
