--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/python"
     },
     {
-      "src": "pages/**/*",
+      "src": "package.json",
       "use": "@vercel/next"
     }
   ],
