--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,10 +1,11 @@
 [phases.setup]
-nixPkgs = ['nodejs_18', 'python39']
+nixPkgs = ['nodejs_18', 'python39', 'python39Packages.pip']
 
 [phases.install]
 cmds = [
     'npm install',
-    'pip install -r requirements.txt'
+    'python -m pip install --upgrade pip',
+    'python -m pip install -r requirements.txt'
 ]
 
 [phases.build]
